Updated Astro and deps
Pushed new updates. Bumped astro to 4.16.0. Fixed a couple front end typos.

--- a/src/components/sections/2-history.astro
+++ b/src/components/sections/2-history.astro
@@ -14,7 +14,7 @@ import plaque from "~/assets/photos/Dublin-Corner-Lot-1.avif";
   <Fragment slot="lead">
     We call it the Corner Lot, but its official name is 
     <br><span class="text-primary">Pretty Peggy Pepper Park</span>. 
-    <br>The is the history of the Corner Lot.
+    <br>This is the history of the Corner Lot.
   </Fragment>
   <div class="max-w-screen-xl grid xl:grid-cols-2 gap-8 items-center">
     <div class="space-y-4">
