--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -23,7 +23,7 @@ const links: Array<FooterLink> = [
       Dublin Corner Lot, Inc.
       </p>
       <p class="font-light"> 
-        Non-Profit 501 (c)(3) Corporation
+        501 (c)(3) Non-Profit Corporation
         <br> EIN: 75-2784640
       </p>
       </div>
@@ -34,6 +34,7 @@ const links: Array<FooterLink> = [
             <a
               class="flex size-16 items-center justify-center border-2 border-current p-4"
               href={link.url}
+              target="_blank"
             >
               <span class="sr-only">{link.description}</span>
               <Icon class="size-full" name={link.icon} />
@@ -44,6 +45,6 @@ const links: Array<FooterLink> = [
     </ul>
   </div>
   <p class="mt-8 text-sm text-center">
-    Website built by <a href="https://www.cobaltweb.tech/?utm_source=dublin-corner-lot&utm_medium=web&utm_campaign=client-site-links" target="_blank" class="text-gold-500">Cobalt Web Technologies</a> in Austin, TX
+    Website built by <a href="https://www.cobaltweb.tech/?utm_source=dublin-corner-lot&utm_medium=web&utm_campaign=client-site-links" target="_blank" class="text-blue-600">Cobalt Web Technologies</a> in Austin, TX
   </p>
 </footer>
