--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,7 @@ import Splash from "~/components/splash.astro";
 import "~/styles/index.css";
 
 const { generator, site } = Astro;
+const umamiId = import.meta.env.UMAMI_WEBSITE_ID;
 const image = new URL("social.jpg", site);
 const description =
   "Dublin Corner Lot is a non-profit organization whose mission is to beautify and provide a free and open public space for all to use.";
@@ -97,6 +98,8 @@ const description =
           }
         });
     </script>
+    <!-- Umami Analytics script tag -->
+    <script defer src="https://umami.cobaltweb.tech/script.js" data-website-id={umamiId}></script>
   </head>
   <body
     class="h-full overflow-x-hidden bg-default text-default text-base selection:bg-secondary selection:text-white"
