Added button to mobile header

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -33,6 +33,16 @@ const navItems: Array<NavItem> = [
           }
         </ul>
       </nav>
+      <div class="lg:hidden">
+        <a
+          href="https://donate.stripe.com/28odSQ40d4wK1TW9AA"
+          aria-label="Donate to Dublin Corner Lot"
+          class="w-fit flex items-center justify-center gap-1 border-2 border-current p-1.5 text-xs uppercase font-extrabold bg-green-400"
+          target="_blank"
+        >
+          Donate Now
+        </a>     
+      </div>
       <button
         id="open-nav-button"
         type="button"
@@ -88,8 +98,8 @@ const navItems: Array<NavItem> = [
             class="w-fit mx-auto flex font-extrabold items-center justify-center gap-3 border-2 border-current px-4 py-2 uppercase bg-green-400"
             target="_blank"
             >
-            <Icon name="donate" class="size-8" />
-            <span>Donate Now</span>
+              <Icon name="donate" class="size-8" />
+              <span>Donate Now</span>
             </a>
           </div>
           <nav>
