--- a/src/components/sections/2-history.astro
+++ b/src/components/sections/2-history.astro
@@ -22,7 +22,7 @@ import plaque from "~/assets/photos/Dublin-Corner-Lot-1.avif";
         In 1975, there was a fire that destroyed a local favorite eatery, Black’s Cafe, along with several other businesses located along Patrick Street. Year after year the absentee owner did nothing and Dublin citizens had finally had enough of the dismal state of the space.
       </p>
       <p class="text-justify text-sm">
-        In 1995, the year the idea for this park was birthed. This plot of land in the center of town had remained barren, ugly, and neglected for over twenty years. Two women, owners of local businesses, planted a tiny garden on the very corner just to make the statement, “This is gonna change!” 
+        1995 is the year the idea for this park was birthed. This plot of land in the center of town had remained barren, ugly, and neglected for over twenty years. Two women, owners of local businesses, planted a tiny garden on the very corner just to make the statement, “This is gonna change!” 
       </p>
     </div>
     <div class="w-full">
@@ -47,7 +47,7 @@ import plaque from "~/assets/photos/Dublin-Corner-Lot-1.avif";
       width="640"
     />
     <p class="max-w-screen-xl text-justify text-sm">
-      After an enormous city-wide garage sale under a big circus tent, the purchase price was still out of reach!  That’s when Billy Kloster, then the owner of Dublin Dr Pepper, offered the needed $20,000 in exchange for the right to build a swinging Pretty Peggy Pepper sign on that corner lot.  He had long dreamed of putting up that sign. In honor of Billy Kloster’s generous donation and his dream, there is a plaque officially naming it Pretty Peggy Pepper Park.
+      After an enormous city-wide garage sale under a big circus tent, the purchase price was still out of reach! That's when Billy Kloster, then the owner of Dublin Dr Pepper, came to the rescue. He donated $15,000 in exchange for the right to build a swinging Peggy Pepper sign on the Corner Lot.  Billy had long dreamed of putting up that sign. Then he challenged a former DHS classmate, Gordon Hollon, to donate the final $5000 to complete the purchase price.  Gordon eagerly agreed.  In honor of Billy Kloster's generous donation and his dream, there's a plaque officially naming this spot Pretty Peggy Pepper Park.
     </p>
   </div>
   <DonateButton />
