Updated astro and content updated
Astro updated to 4.16.7 and added a confirmation page for donations. Other deps updated.

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -5,9 +5,9 @@ import Logo from "~/components/logo.astro"
 import type { NavItem } from "~/types";
 
 const navItems: Array<NavItem> = [
-  { title: "About Us", url: "#about-us" },
-  { title: "History", url: "#history" },
-  { title: "Our Mission", url: "#our-mission" },
+  { title: "About Us", url: "/#about-us" },
+  { title: "History", url: "/#history" },
+  { title: "Our Mission", url: "/#our-mission" },
 ];
 ---
 
