Updated astro and deps
Updated astro to 4.16.8 and updated deps. Minor correction to styling on front end.

--- a/src/components/splash.astro
+++ b/src/components/splash.astro
@@ -6,7 +6,7 @@ import VideoHero from "~/components/video-hero.astro";
     <VideoHero />
   </div>
   <div class="row-start-1 col-start-1 z-10">
-    <h1 class="mx-4 sm:mx-0 text-gold-400 text-center font-black tracking-tighter text-4xl md:text-6xl">
+    <h1 class="mx-4 sm:mx-0 text-gold-400 text-center font-black text-4xl md:text-6xl">
       Welcome to Dublin's Front Porch
     </h1>
   </div>
