Minor fixes to styles
Forgot to remove the "tracking-tight" class from text headers. No back end updates.

--- a/src/components/sections/donation-received.astro
+++ b/src/components/sections/donation-received.astro
@@ -13,7 +13,7 @@ import waterFountain from "~/assets/photos/Dublin-Corner-Lot-3.avif"
   <Icon name="donation-heart" class="size-36 text-green-400" />
   <div class="flex flex-col items-center gap-4">
     <h2
-      class="gradient-text text-center font-black tracking-tight text-6xl"
+      class="gradient-text text-center font-black text-6xl"
     >
       Thank You for Donating!
     </h2>
