--- a/src/components/content-section.astro
+++ b/src/components/content-section.astro
@@ -14,7 +14,7 @@ const { title, id } = Astro.props;
   <div class="flex flex-col items-center gap-4">
     <slot name="above-icon" />
     <h2
-      class="gradient-text text-center font-black tracking-tight text-6xl"
+      class="gradient-text text-center font-black text-6xl"
     >
       {title}
     </h2>
