Updated Astro and deps
Updated Astro to 4.16.18 and other deps. Fixed an issue with preloading fonts. No front end changes.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,7 +39,7 @@ const description =
     <AstroFont
       config={[
         {
-          preload: false,
+          preload: true,
           display: 'swap',
           name: 'Avenir',
           fallback: 'sans-serif',
