Updated Astro to v5
Astro updated to 5.1.7 and other deps. Added preconnect directive to index page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -68,7 +68,9 @@ const description =
         }
       ]}
     />
-   
+    <!-- Preconnect third party resources -->
+    <link rel="preconnect" href="https://iframe.mediadelivery.net" />
+    
     <!--Import Lenis smooth scroll script -->
     <script>
       import "~/assets/scripts/lenisSmoothScroll.js";
