--- a/src/components/splash.astro
+++ b/src/components/splash.astro
@@ -2,7 +2,7 @@
 import VideoHero from "~/components/video-hero.astro";
 ---
 <section class="grid grid-cols-1 grid-rows-1 mt-28 sm:mt-40 items-center gap-4">
-  <div class="row-start-1 col-start-1">
+  <div class="row-start-1 col-start-1 animate-fade-in">
     <VideoHero />
   </div>
   <div class="row-start-1 col-start-1 z-10">
