Upgraded Tailwind and fixes
Tailwind upgraded to v4, Astro updated to v5.2.3, other deps updated. Changed tailwind config to the global.css. Changed astro.config with new minification and compression.

--- a/src/components/donate-button.astro
+++ b/src/components/donate-button.astro
@@ -1,11 +1,12 @@
 ---
 import { Icon } from "astro-icon/components";
 ---
+
 <div>
   <a
     href="https://donate.stripe.com/28odSQ40d4wK1TW9AA"
     aria-label="Donate to Dublin Corner Lot"
-    class="flex font-extrabold items-center justify-center gap-3 border-2 border-current px-6 py-4 uppercase bg-green-400"
+    class="flex items-center justify-center gap-3 border-2 border-current bg-green-500 px-6 py-4 font-extrabold uppercase"
     target="_blank"
   >
     <Icon name="donate" class="size-8" />
