--- a/src/components/content-section.astro
+++ b/src/components/content-section.astro
@@ -9,17 +9,17 @@ const { title, id } = Astro.props;
 
 <section
   id={id}
-  class="px-8 py-32 flex scroll-mt-24 flex-col items-center gap-4 space-y-8"
+  class="mx-auto flex max-w-screen-xl scroll-mt-24 flex-col items-center gap-4 space-y-8 px-8 py-16 sm:py-24"
 >
   <div class="flex flex-col items-center gap-4">
     <slot name="above-icon" />
     <h2
-      class="gradient-text text-center font-black text-6xl"
+      class="gradient-text text-center text-4xl font-black md:text-6xl md:leading-[1.25]"
     >
       {title}
     </h2>
   </div>
-  <p class="max-w-xl text-center font-extrabold text-2xl">
+  <p class="max-w-xl text-center text-2xl font-extrabold">
     <slot name="lead" />
   </p>
   <slot />
