--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -16,17 +16,15 @@ const links: Array<FooterLink> = [
 ];
 ---
 
-<footer class="py-16 px-4 border-t-2 border-default bg-offset">
-  <div class="flex items-center justify-around w-full">
+<footer class="border-default bg-offset border-t-2 px-4 py-16">
+  <div class="flex w-full items-center justify-around">
     <div class="text-sm">
-      <p class="font-extrabold">
-      Dublin Corner Lot, Inc.
-      </p>
-      <p class="font-light"> 
+      <p class="font-extrabold">Dublin Corner Lot, Inc.</p>
+      <p class="font-light">
         501 (c)(3) Non-Profit Corporation
-        <br> EIN: 75-2784640
+        <br /> EIN: 75-2784640
       </p>
-      </div>
+    </div>
     <ul class="grid grid-cols-2 gap-4">
       {
         links.map((link) => (
@@ -44,7 +42,11 @@ const links: Array<FooterLink> = [
       }
     </ul>
   </div>
-  <p class="mt-8 text-sm text-center">
-    Website built by <a href="https://www.cobaltweb.tech/?utm_source=dublin-corner-lot&utm_medium=web&utm_campaign=client-site-links" target="_blank" class="text-blue-600">Cobalt Web Technologies</a> in Austin, TX
+  <p class="mt-8 text-center text-sm">
+    Website built by <a
+      href="https://www.cobaltweb.tech/?utm_source=dublin-corner-lot&utm_medium=web&utm_campaign=client-site-links"
+      target="_blank"
+      class="text-blue-600">Cobalt Web Technologies</a
+    > in Austin, TX
   </p>
 </footer>
