--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -1,7 +1,7 @@
 ---
 import { Icon } from "astro-icon/components";
 import ThemeSwitcher from "~/components/theme-switcher.astro";
-import Logo from "~/components/logo.astro"
+import Logo from "~/components/logo.astro";
 import type { NavItem } from "~/types";
 
 const navItems: Array<NavItem> = [
@@ -13,176 +13,190 @@ const navItems: Array<NavItem> = [
 
 <header
   id="page-header"
-  class="fixed bottom-auto top-0 z-20 flex w-full items-center justify-between border-b-2 border-default bg-offset px-8 py-4 text-default"
+  class="border-default bg-offset text-default fixed top-0 bottom-auto z-20 flex w-full items-center justify-between border-b-2 px-8 py-4"
 >
   <a class="flex items-center gap-3" href="/">
-    <Logo class="w-28">
-  </a>
-  <div>
-    <div class="flex items-center gap-6">
-      <nav class="hidden lg:block">
-        <ul class="flex items-center gap-6">
-          {
-            navItems.map(({ title, url }) => (
-              <li>
-                <a class="text-md" href={url}>
-                  {title}
-                </a>
-              </li>
-            ))
-          }
-        </ul>
-      </nav>
-      <div class="lg:hidden">
-        <a
-          href="https://donate.stripe.com/28odSQ40d4wK1TW9AA"
-          aria-label="Donate to Dublin Corner Lot"
-          class="w-fit flex items-center justify-center gap-1 border-2 border-current p-1.5 text-xs uppercase font-extrabold bg-green-400"
-          target="_blank"
-        >
-          Donate Now
-        </a>     
-      </div>
-      <button
-        id="open-nav-button"
-        type="button"
-        class="btn lg:hidden"
-        aria-label="Navigation"
-      >
-        <Icon name="mdi:menu" class="size-8" />
-      </button>
-      <div class="hidden lg:block">
-        <ul class="flex items-center gap-6">
-          <li>
-            <a href="https://www.facebook.com/people/Dublin-Corner-Lot/61566389771766/?mibextid=LQQJ4d" target="_blank">
-              <Icon name="mdi:facebook" class="size-8" />
-            </a>
-          </li>
-          <li>
-            <a href="https://www.instagram.com/dublin_cornerlot/" target="_blank">
-              <Icon name="mdi:instagram" class="size-8" />
-            </a>
-          </li>
-          <li>
-            <a
-              href="https://donate.stripe.com/28odSQ40d4wK1TW9AA"
-              aria-label="Donate to Dublin Corner Lot"
-              class="flex font-extrabold items-center justify-center gap-3 border-2 border-current px-4 py-2 uppercase bg-green-400"
-              target="_blank"
-            >
-              <Icon name="donate" class="size-8" />
-              <span>Donate Now</span>
-            </a>
-          </li>
-        </ul>
-      </div>
-      <ThemeSwitcher />
-    </div>
-    <div id="menu-modal" class="modal hidden" aria-hidden="true">
-      <div class="fixed inset-0 bg-default px-8 py-4 text-default">
-        <div class="space-y-4" role="dialog" aria-modal="true">
-          <header class="text-right">
-            <button
-              id="close-nav-button"
-              type="button"
-              class="btn"
-              aria-label="Close navigation"
-            >
-              <Icon name="mdi:close" class="size-8" />
-            </button>
-          </header>
-          <div class="flex justify-center">
-            <a
+    <Logo class="w-28" />
+    <div>
+      <div class="flex items-center gap-6">
+        <nav class="hidden lg:block">
+          <ul class="flex items-center gap-6">
+            {
+              navItems.map(({ title, url }) => (
+                <li>
+                  <a class="text-lg font-semibold" href={url}>
+                    {title}
+                  </a>
+                </li>
+              ))
+            }
+          </ul>
+        </nav>
+        <div class="lg:hidden">
+          <a
             href="https://donate.stripe.com/28odSQ40d4wK1TW9AA"
             aria-label="Donate to Dublin Corner Lot"
-            class="w-fit mx-auto flex font-extrabold items-center justify-center gap-3 border-2 border-current px-4 py-2 uppercase bg-green-400"
+            class="flex w-fit items-center justify-center gap-1 border-2 border-current bg-green-500 p-1.5 text-xs font-extrabold uppercase"
             target="_blank"
-            >
-              <Icon name="donate" class="size-8" />
-              <span>Donate Now</span>
-            </a>
-          </div>
-          <nav>
-            <ul class="flex flex-col">
-              {
-                navItems.map(({ title, url }) => (
-                  <li>
-                    <a class="block py-4 text-center text-xl" href={url}>
-                      {title}
-                    </a>
-                  </li>
-                ))
-              }
-            </ul>
-          </nav>
-          <ul class="flex flex-col gap-4">
+          >
+            Donate Now
+          </a>
+        </div>
+        <button
+          id="open-nav-button"
+          type="button"
+          class="btn lg:hidden"
+          aria-label="Navigation"
+        >
+          <Icon name="mdi:menu" class="size-8" />
+        </button>
+        <div class="hidden lg:block">
+          <ul class="flex items-center gap-6">
             <li>
-              <a class="flex justify-center mx-auto w-[10%]" href="https://www.facebook.com/people/Dublin-Corner-Lot/61566389771766/?mibextid=LQQJ4d" target="_blank">
-                <Icon name="mdi:facebook" class="size-full" />
+              <a
+                href="https://www.facebook.com/people/Dublin-Corner-Lot/61566389771766/?mibextid=LQQJ4d"
+                target="_blank"
+              >
+                <Icon name="mdi:facebook" class="size-8" />
               </a>
             </li>
             <li>
-              <a class="flex justify-center mx-auto w-[10%]" href="https://www.instagram.com/dublin_cornerlot/" target="_blank">
-                <Icon name="mdi:instagram" class="size-full" />
+              <a
+                href="https://www.instagram.com/dublin_cornerlot/"
+                target="_blank"
+              >
+                <Icon name="mdi:instagram" class="size-8" />
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://donate.stripe.com/28odSQ40d4wK1TW9AA"
+                aria-label="Donate to Dublin Corner Lot"
+                class="flex items-center justify-center gap-3 border-2 border-current bg-green-500 px-4 py-2 font-extrabold uppercase"
+                target="_blank"
+              >
+                <Icon name="donate" class="size-8" />
+                <span>Donate Now</span>
               </a>
             </li>
           </ul>
         </div>
+        <ThemeSwitcher />
+      </div>
+      <div id="menu-modal" class="modal hidden" aria-hidden="true">
+        <div class="bg-default text-default fixed inset-0 px-8 py-4">
+          <div class="space-y-4" role="dialog" aria-modal="true">
+            <header class="text-right">
+              <button
+                id="close-nav-button"
+                type="button"
+                class="btn"
+                aria-label="Close navigation"
+              >
+                <Icon name="mdi:close" class="size-8" />
+              </button>
+            </header>
+            <div class="flex justify-center">
+              <a
+                href="https://donate.stripe.com/28odSQ40d4wK1TW9AA"
+                aria-label="Donate to Dublin Corner Lot"
+                class="mx-auto flex w-fit items-center justify-center gap-3 border-2 border-current bg-green-500 px-4 py-2 font-extrabold uppercase"
+                target="_blank"
+              >
+                <Icon name="donate" class="size-8" />
+                <span>Donate Now</span>
+              </a>
+            </div>
+            <nav>
+              <ul class="flex flex-col">
+                {
+                  navItems.map(({ title, url }) => (
+                    <li>
+                      <a class="block py-4 text-center text-xl" href={url}>
+                        {title}
+                      </a>
+                    </li>
+                  ))
+                }
+              </ul>
+            </nav>
+            <ul class="flex flex-col gap-4">
+              <li>
+                <a
+                  class="mx-auto flex w-[10%] justify-center"
+                  href="https://www.facebook.com/people/Dublin-Corner-Lot/61566389771766/?mibextid=LQQJ4d"
+                  target="_blank"
+                >
+                  <Icon name="mdi:facebook" class="size-full" />
+                </a>
+              </li>
+              <li>
+                <a
+                  class="mx-auto flex w-[10%] justify-center"
+                  href="https://www.instagram.com/dublin_cornerlot/"
+                  target="_blank"
+                >
+                  <Icon name="mdi:instagram" class="size-full" />
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-</header>
+  </a>
 
-<script>
-  import MicroModal from "micromodal";
-  import invariant from "tiny-invariant";
+  <script>
+    import MicroModal from "micromodal";
+    import invariant from "tiny-invariant";
 
-  const menuModalId = "menu-modal";
+    const menuModalId = "menu-modal";
 
-  const header = document.querySelector("#page-header") as HTMLElement;
-  const page = document.documentElement;
-  const menu = document.querySelector(`#${menuModalId} ul`);
-  const openNavButton = document.querySelector("#open-nav-button");
-  const closeNavButton = document.querySelector("#close-nav-button");
+    const header = document.querySelector("#page-header") as HTMLElement;
+    const page = document.documentElement;
+    const menu = document.querySelector(`#${menuModalId} ul`);
+    const openNavButton = document.querySelector("#open-nav-button");
+    const closeNavButton = document.querySelector("#close-nav-button");
 
-  invariant(header, "header should not be null");
-  invariant(menu, "menu should not be null");
-  invariant(openNavButton, "openNavButton should not be null");
-  invariant(closeNavButton, "closeNavButton should not be null");
+    invariant(header, "header should not be null");
+    invariant(menu, "menu should not be null");
+    invariant(openNavButton, "openNavButton should not be null");
+    invariant(closeNavButton, "closeNavButton should not be null");
 
-  const openMenu = () => {
-    MicroModal.show(menuModalId, { disableScroll: true });
-  };
+    const openMenu = () => {
+      MicroModal.show(menuModalId, { disableScroll: true });
+    };
 
-  const closeMenu = () => {
-    MicroModal.close(menuModalId);
-  };
+    const closeMenu = () => {
+      MicroModal.close(menuModalId);
+    };
 
-  openNavButton.addEventListener("click", openMenu);
-  closeNavButton.addEventListener("click", closeMenu);
+    openNavButton.addEventListener("click", openMenu);
+    closeNavButton.addEventListener("click", closeMenu);
 
-  document.addEventListener("scroll", () => {
-    const d = page.clientHeight - page.scrollTop - header.offsetHeight;
-    header.classList.toggle("fixed-header", d < 0);
-  });
+    document.addEventListener("scroll", () => {
+      const d = page.clientHeight - page.scrollTop - header.offsetHeight;
+      header.classList.toggle("fixed-header", d < 0);
+    });
 
-  menu.addEventListener("click", (event) => {
-    if ((event.target as HTMLElement).tagName === "A") {
-      closeMenu();
-    }
-  });
-</script>
+    menu.addEventListener("click", (event) => {
+      if ((event.target as HTMLElement).tagName === "A") {
+        closeMenu();
+      }
+    });
+  </script>
 
-<noscript>
+  <noscript>
+    <style>
+      #open-nav-button {
+        display: none;
+      }
+    </style>
+  </noscript>
+
   <style>
-    #open-nav-button {
-      display: none;
+    .modal.is-open {
+      @apply block;
     }
   </style>
-</noscript>
-
-<style>
-  .modal.is-open {
-    @apply block;
-  }
-</style>
+</header>
