--- a/src/components/home-button.astro
+++ b/src/components/home-button.astro
@@ -1,11 +1,12 @@
 ---
 import { Icon } from "astro-icon/components";
 ---
+
 <div>
   <a
     href="/"
     aria-label="Home Button"
-    class="flex font-extrabold items-center justify-center gap-3 border-2 border-current px-6 py-4 uppercase bg-green-400"
+    class="flex items-center justify-center gap-3 border-2 border-current bg-green-500 px-6 py-4 font-extrabold uppercase"
   >
     <Icon name="home" class="size-10" />
     <span>Go to Home Page</span>
