--- a/src/components/sections/donation-received.astro
+++ b/src/components/sections/donation-received.astro
@@ -4,29 +4,29 @@ import { Image } from "astro:assets";
 import HomeButton from "~/components/home-button.astro";
 
 // Import images
-import waterFountain from "~/assets/photos/Dublin-Corner-Lot-3.avif"
+import waterFountain from "~/assets/photos/Dublin-Corner-Lot-3.avif";
 ---
 
 <section
-  class="px-8 py-48 flex scroll-mt-24 flex-col items-center gap-4 space-y-8"
+  class="flex scroll-mt-24 flex-col items-center gap-4 space-y-8 px-8 py-48"
 >
   <Icon name="donation-heart" class="size-36 text-green-400" />
   <div class="flex flex-col items-center gap-4">
-    <h2
-      class="gradient-text text-center font-black text-6xl"
-    >
+    <h2 class="gradient-text text-center text-6xl font-black">
       Thank You for Donating!
     </h2>
   </div>
-  <p class="max-w-xl text-center font-normal text-xl">
+  <p class="max-w-xl text-center text-xl font-normal">
     Your donation has been received.
   </p>
-  <p class="max-w-4xl text-justify font-normal text-md">
-    A payment to Dublin Corner Lot, Inc. will appear on your statement. A donation receipt will be sent to your email. Donations are classified as tax deductible expenses as we are a 501 (c) (3) non-profit organization. 
-    <br>Our EIN is: 75-2784640
+  <p class="max-w-4xl text-justify text-lg font-normal">
+    A payment to Dublin Corner Lot, Inc. will appear on your statement. A
+    donation receipt will be sent to your email. Donations are classified as tax
+    deductible expenses as we are a 501 (c) (3) non-profit organization.
+    <br />Our EIN is: 75-2784640
   </p>
   <HomeButton />
-  <div class="max-w-screen-xl grid xl:grid-cols-2 gap-8 items-center">
+  <div class="grid max-w-screen-xl items-center gap-8 xl:grid-cols-2">
     <div class="w-full">
       <Image
         class="w-full border-8 border-green-400"
@@ -37,10 +37,11 @@ import waterFountain from "~/assets/photos/Dublin-Corner-Lot-3.avif"
       />
     </div>
     <div class="space-y-8">
-      <p class="text-justify text-md">
-        Your generous charitable contribution allows us to continue our mission of maintaining and creating a beautiful open green space for all to use.
+      <p class="text-justify text-lg">
+        Your generous charitable contribution allows us to continue our mission
+        of maintaining and creating a beautiful open green space for all to use.
       </p>
-      <p class="text-justify font-extrabold text-md text-gold-600">
+      <p class="text-gold-600 text-justify text-lg font-extrabold">
         Thank You!
       </p>
     </div>
