--- a/src/components/splash.astro
+++ b/src/components/splash.astro
@@ -1,12 +1,15 @@
 ---
 import VideoHero from "~/components/video-hero.astro";
 ---
-<section class="grid grid-cols-1 grid-rows-1 mt-28 sm:mt-40 items-center gap-4">
-  <div class="row-start-1 col-start-1 animate-fade-in">
+
+<section class="mt-28 grid grid-cols-1 grid-rows-1 items-center gap-4 sm:mt-40">
+  <div class="animate-fade-in col-start-1 row-start-1">
     <VideoHero />
   </div>
-  <div class="row-start-1 col-start-1 z-10">
-    <h1 class="mx-4 sm:mx-0 text-gold-400 text-center font-black text-4xl md:text-6xl">
+  <div class="z-10 col-start-1 row-start-1">
+    <h1
+      class="text-gold-400 mx-4 text-center text-xl font-black sm:mx-0 md:text-6xl"
+    >
       Welcome to Dublin's Front Porch
     </h1>
   </div>
