--- a/src/components/theme-switcher.astro
+++ b/src/components/theme-switcher.astro
@@ -6,11 +6,7 @@ import { Icon } from "astro-icon/components";
   negative margin is sum of button width (6) and gap size of flex parent (6)
   TODO don't hardcode these values
 -->
-<button
-  id="theme-switcher"
-  type="button"
-  class="ml-0 origin-[right_center]"
->
+<button id="theme-switcher" type="button" class="ml-0 origin-[right_center]">
   <div id="icon-theme-light">
     <Icon name="mdi:white-balance-sunny" class="size-6" />
     <span class="sr-only">Use light theme</span>
