--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,14 @@
 ---
-import { AstroFont } from 'astro-font';
-import { join } from 'path';
+import { AstroFont } from "astro-font";
+import { join } from "path";
 import Footer from "~/components/footer.astro";
 import Header from "~/components/header.astro";
 import SectionFirst from "~/components/sections/1-about-us.astro";
 import SectionSecond from "~/components/sections/2-history.astro";
 import SectionThird from "~/components/sections/3-our-mission.astro";
 import Splash from "~/components/splash.astro";
-import "~/styles/index.css";
+import BackToTopButton from "~/components/BackToTopButton.astro";
+import "~/styles/global.css";
 
 const { generator, site } = Astro;
 const umamiId = import.meta.env.UMAMI_WEBSITE_ID;
@@ -40,41 +41,61 @@ const description =
       config={[
         {
           preload: true,
-          display: 'swap',
-          name: 'Avenir',
-          fallback: 'sans-serif',
+          display: "swap",
+          name: "Avenir",
+          fallback: "sans-serif",
           src: [
-          {
-              weight: '100',
-              style: 'normal',
-              path: join(process.cwd(), 'public', 'fonts', 'Avenir-Light.woff2')
+            {
+              weight: "100",
+              style: "normal",
+              path: join(
+                process.cwd(),
+                "public",
+                "fonts",
+                "Avenir-Light.woff2",
+              ),
             },
             {
-              weight: '400',
-              style: 'normal',
-              path: join(process.cwd(), 'public', 'fonts', 'Avenir-Medium.woff2')
+              weight: "400",
+              style: "normal",
+              path: join(
+                process.cwd(),
+                "public",
+                "fonts",
+                "Avenir-Medium.woff2",
+              ),
             },
             {
-              weight: '800',
-              style: 'normal',
-              path: join(process.cwd(), 'public', 'fonts', 'Avenir-Heavy.woff2')
+              weight: "800",
+              style: "normal",
+              path: join(
+                process.cwd(),
+                "public",
+                "fonts",
+                "Avenir-Heavy.woff2",
+              ),
             },
             {
-              weight: '900',
-              style: 'normal',
-              path: join(process.cwd(), 'public', 'fonts', 'Avenir-Black.woff2')
-            }
-          ]
-        }
+              weight: "900",
+              style: "normal",
+              path: join(
+                process.cwd(),
+                "public",
+                "fonts",
+                "Avenir-Black.woff2",
+              ),
+            },
+          ],
+        },
       ]}
     />
     <!-- Preconnect third party resources -->
     <link rel="preconnect" href="https://iframe.mediadelivery.net" />
-    
+
     <!--Import Lenis smooth scroll script -->
     <script>
       import "~/assets/scripts/lenisSmoothScroll.js";
-    </script>    
+    </script>
 
     <!-- initialize theme -->
     <script is:inline>
@@ -100,10 +121,13 @@ const description =
         });
     </script>
     <!-- Umami Analytics script tag -->
-    <script defer src="https://umami.cobaltweb.tech/script.js" data-website-id={umamiId}></script>
+    <script
+      defer
+      src="https://umami.cobaltweb.tech/script.js"
+      data-website-id={umamiId}></script>
   </head>
   <body
-    class="h-full overflow-x-hidden bg-default text-default text-base selection:bg-secondary selection:text-white"
+    class="bg-default text-default selection:bg-secondary h-full overflow-x-hidden text-base selection:text-white"
   >
     <Header />
     <Splash />
@@ -111,5 +135,6 @@ const description =
     <SectionSecond />
     <SectionThird />
     <Footer />
+    <BackToTopButton />
   </body>
 </html>
