--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,6 +1,6 @@
 ---
 import { Icon } from "astro-icon/components";
-import type { FooterLink } from "~/types";
+import type { FooterLink } from "@/types";
 
 const links: Array<FooterLink> = [
   {
