--- a/src/components/sections/SectionHistory.astro
+++ b/src/components/sections/SectionHistory.astro
@@ -1,12 +1,12 @@
 ---
 import { Icon } from "astro-icon/components";
 import { Image } from "astro:assets";
-import ContentSection from "~/components/content-section.astro";
-import DonateButton from "~/components/donate-button.astro";
+import ContentSection from "@comp/ContentSection";
+import DonateButton from "@comp/DonateButton";
 
 // Import images
-import archive from "~/assets/photos/Dublin-Corner-Lot-archive.avif";
-import plaque from "~/assets/photos/Dublin-Corner-Lot-1.avif";
+import archive from "@img/Dublin-Corner-Lot-archive.avif";
+import plaque from "@img/Dublin-Corner-Lot-1.avif";
 ---
 
 <ContentSection title="History of the Corner Lot" id="history">
