--- a/src/components/sections/SectionMission.astro
+++ b/src/components/sections/SectionMission.astro
@@ -1,17 +1,16 @@
 ---
-import { Icon } from "astro-icon/components";
 import { Image } from "astro:assets";
-import ContentSection from "~/components/content-section.astro";
-import DonateButton from "~/components/donate-button.astro";
+import ContentSection from "@comp/ContentSection";
+import DonateButton from "@comp/DonateButton";
 
 // Import images
-import imgTall from "~/assets/photos/Dublin-Corner-Lot-4.avif";
-import img1 from "~/assets/photos/Dublin-Corner-Lot-5.avif";
-import img2 from "~/assets/photos/Dublin-Corner-Lot-6.avif";
-import img3 from "~/assets/photos/Dublin-Corner-Lot-7.avif";
-import img4 from "~/assets/photos/Dublin-Corner-Lot-8.avif";
-import img5 from "~/assets/photos/Dublin-Corner-Lot-9.avif";
-import img6 from "~/assets/photos/Dublin-Corner-Lot-10.avif";
+import imgTall from "@img/Dublin-Corner-Lot-4.avif";
+import img1 from "@img/Dublin-Corner-Lot-5.avif";
+import img2 from "@img/Dublin-Corner-Lot-6.avif";
+import img3 from "@img/Dublin-Corner-Lot-7.avif";
+import img4 from "@img/Dublin-Corner-Lot-8.avif";
+import img5 from "@img/Dublin-Corner-Lot-9.avif";
+import img6 from "@img/Dublin-Corner-Lot-10.avif";
 ---
 
 <ContentSection title="Our Mission" id="our-mission">
