Resolved Paths and Astro Extensions
- Fixed import paths not resolving correctly for Vercel build.

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,9 +1,9 @@
 ---
-import Meta from "@layout/Meta";
+import Meta from "@layout/Meta.astro";
 import { SITE } from "@/data/siteConfig";
-import Header from "@comp/Header";
-import Footer from "@comp/Footer";
-import BackToTopButton from "@comp/BackToTopButton";
+import Header from "@comp/Header.astro";
+import Footer from "@comp/Footer.astro";
+import BackToTopButton from "@comp/BackToTopButton.astro";
 import "@/styles/global.css";
 
 // Setting expected props
