--- a/src/components/sections/SectionHistory.astro
+++ b/src/components/sections/SectionHistory.astro
@@ -1,8 +1,8 @@
 ---
 import { Icon } from "astro-icon/components";
 import { Image } from "astro:assets";
-import ContentSection from "@comp/ContentSection";
-import DonateButton from "@comp/DonateButton";
+import ContentSection from "@comp/ContentSection.astro";
+import DonateButton from "@comp/DonateButton.astro";
 
 // Import images
 import archive from "@img/Dublin-Corner-Lot-archive.avif";
