--- a/src/components/sections/SectionMission.astro
+++ b/src/components/sections/SectionMission.astro
@@ -1,7 +1,7 @@
 ---
 import { Image } from "astro:assets";
-import ContentSection from "@comp/ContentSection";
-import DonateButton from "@comp/DonateButton";
+import ContentSection from "@comp/ContentSection.astro";
+import DonateButton from "@comp/DonateButton.astro";
 
 // Import images
 import imgTall from "@img/Dublin-Corner-Lot-4.avif";
