--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
-import BaseLayout from "@layout/BaseLayout";
-import SectionHero from "@comp/sections/SectionHero";
-import SectionFirst from "@comp/sections/SectionAbout";
-import SectionSecond from "@comp/sections/SectionHistory";
-import SectionThird from "@comp/sections/SectionMission";
+import BaseLayout from "@layout/BaseLayout.astro";
+import SectionHero from "@comp/sections/SectionHero.astro";
+import SectionFirst from "@comp/sections/SectionAbout.astro";
+import SectionSecond from "@comp/sections/SectionHistory.astro";
+import SectionThird from "@comp/sections/SectionMission.astro";
 ---
 
 <BaseLayout>
