Updated Import Paths

--- a/src/components/sections/SectionHistory.astro
+++ b/src/components/sections/SectionHistory.astro
@@ -1,12 +1,12 @@
 ---
 import { Icon } from "astro-icon/components";
 import { Image } from "astro:assets";
-import ContentSection from "@comp/ContentSection.astro";
-import DonateButton from "@comp/DonateButton.astro";
+import ContentSection from "@/comp/ContentSection.astro";
+import DonateButton from "@/comp/DonateButton.astro";
 
 // Import images
-import archive from "@img/Dublin-Corner-Lot-archive.avif";
-import plaque from "@img/Dublin-Corner-Lot-1.avif";
+import archive from "@/img/Dublin-Corner-Lot-archive.avif";
+import plaque from "@/img/Dublin-Corner-Lot-1.avif";
 ---
 
 <ContentSection title="History of the Corner Lot" id="history">
