--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import SectionSecond from "@/comp/sections/SectionHistory.astro";
 import SectionThird from "@/comp/sections/SectionMission.astro";
 ---
 
-<BaseLayout>
+<BaseLayout externalAsset={true}>
   <SectionHero />
   <SectionFirst />
   <SectionSecond />
