Updated import paths

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -1,7 +1,7 @@
 ---
 import { Icon } from "astro-icon/components";
-import ThemeSwitcher from "@/comp/ThemeSwitcher.astro";
-import Logo from "@/comp/Logo.astro";
+import ThemeSwitcher from "@comp/ThemeSwitcher.astro";
+import Logo from "@comp/Logo.astro";
 import type { NavItem } from "@/types";
 
 // Define array of menu items
