--- a/src/pages/thank-you-for-donating.astro
+++ b/src/pages/thank-you-for-donating.astro
@@ -1,6 +1,6 @@
 ---
-import BaseLayout from "@/layout/BaseLayout.astro";
-import Donation from "@/comp/sections/DonationReceived.astro";
+import BaseLayout from "@layout/BaseLayout.astro";
+import Donation from "@comp/sections/DonationReceived.astro";
 import { SITE } from "@/data/siteConfig";
 
 const pageTitle: string = `Thank You for Donating | ${SITE.title}`;
