--- a/src/components/sections/SectionHero.astro
+++ b/src/components/sections/SectionHero.astro
@@ -1,5 +1,5 @@
 ---
-import VideoHero from "@/comp/VideoHero.astro";
+import VideoHero from "@comp/VideoHero.astro";
 ---
 
 <section class="mt-28 grid grid-cols-1 grid-rows-1 items-center gap-4 sm:mt-40">
