--- a/src/layouts/Meta.astro
+++ b/src/layouts/Meta.astro
@@ -1,8 +1,8 @@
 ---
 import { getImage } from "astro:assets";
 import { OG, SEO, SITE } from "@/data/siteConfig";
-import faviconSvgSrc from "@/img/favicon/favicon.svg";
-import faviconSrc from "@/img/favicon/icon-maskable.png";
+import faviconSvgSrc from "@img/favicon/favicon.svg";
+import faviconSrc from "@img/favicon/icon-maskable.png";
 import { join } from "path";
 import { AstroFont } from "astro-font";
 
