Updated Import Paths

--- a/src/components/sections/SectionAbout.astro
+++ b/src/components/sections/SectionAbout.astro
@@ -1,11 +1,11 @@
 ---
 import { Icon } from "astro-icon/components";
 import { Image } from "astro:assets";
-import ContentSection from "@comp/ContentSection.astro";
-import DonateButton from "@comp/DonateButton.astro";
+import ContentSection from "@/components/ContentSection.astro";
+import DonateButton from "@/components/DonateButton.astro";
 
 // Import images
-import waterFountain from "@img/Dublin-Corner-Lot-3.avif";
+import waterFountain from "@/assets/images/Dublin-Corner-Lot-3.avif";
 ---
 
 <ContentSection title="About the Dublin Corner Lot" id="about-us">
