--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,9 +1,9 @@
 ---
-import Meta from "@layout/Meta.astro";
+import Meta from "@/layouts/Meta.astro";
 import { SITE } from "@/data/siteConfig";
-import Header from "@comp/Header.astro";
-import Footer from "@comp/Footer.astro";
-import BackToTopButton from "@comp/BackToTopButton.astro";
+import Header from "@/components/Header.astro";
+import Footer from "@/components/Footer.astro";
+import BackToTopButton from "@/components/BackToTopButton.astro";
 import "@/styles/global.css";
 
 // Setting expected props
