--- a/src/components/sections/DonationReceived.astro
+++ b/src/components/sections/DonationReceived.astro
@@ -1,10 +1,10 @@
 ---
 import { Icon } from "astro-icon/components";
 import { Image } from "astro:assets";
-import HomeButton from "@comp/HomeButton.astro";
+import HomeButton from "@/components/HomeButton.astro";
 
 // Import images
-import waterFountain from "@img/Dublin-Corner-Lot-3.avif";
+import waterFountain from "@/assets/images/Dublin-Corner-Lot-3.avif";
 ---
 
 <section
