--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
-import BaseLayout from "@layout/BaseLayout.astro";
-import SectionHero from "@comp/sections/SectionHero.astro";
-import SectionFirst from "@comp/sections/SectionAbout.astro";
-import SectionSecond from "@comp/sections/SectionHistory.astro";
-import SectionThird from "@comp/sections/SectionMission.astro";
+import BaseLayout from "@/layouts/BaseLayout.astro";
+import SectionHero from "@/components/sections/SectionHero.astro";
+import SectionFirst from "@/components/sections/SectionAbout.astro";
+import SectionSecond from "@/components/sections/SectionHistory.astro";
+import SectionThird from "@/components/sections/SectionMission.astro";
 ---
 
 <BaseLayout externalAsset={true}>
